# Advent2023Hs

./: Advent2023Hs.cabal  CHANGELOG.md  advent-runner.nix  cabal.project  default.nix
app/: #Main.hs#  *advent2023hs*  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Main.hs
src/app/: Day02.hs
