cabal-version:      3.6
name:               Advent2023Hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Advent2023Hs
    main-is:          Main.hs
    other-modules:    Paths_Advent2023Hs,
                      Day01,
                      Day02,
                      Day03,
                      Day04,
                      Day05
    autogen-modules:  Paths_Advent2023Hs
    data-dir:         data
    data-files:       data/*.txt
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.19.0.0,
                      advent-runner,
                      containers ^>=0.6.8,
                      parsec ^>=3.1.17.0,
                      text ^>=2.1 

    hs-source-dirs:   app
    default-language: Haskell2010
